# midas-alt

./: .gitignore  README.md  main.py  pyproject.toml
docs/: IMPLEMENTATION_EXAMPLE.md  MIDAS_model_summary.md  STRUCTURE_IMPROVEMENTS.md  config_readme.md  domain_readme.md  follow_up.md  prediction_readme.md  simulation_readme.md
examples/: ml_prediction_demo.py
src/cli/: cli.py
src/cli/handlers/: __init__.py  config_handlers.py  ml_handlers.py  simulate_handlers.py
src/cli/menu/: __init__.py  menu_builder.py  menu_config.py  menu_factory.py  menu_handler.py  menu_item.py
src/cli/utils/: __init__.py  display.py  input.py  navigation.py
src/config/: __init__.py  app_state.py  config_readme.md  display.py  loader.py  midas_config_values.xlsx  reference_data.py  settings.py
src/config/functions/: __init__.py  configure_logging.py
src/domain/: __init__.py  entities.py  enums.py  work_order_entities.py
src/prediction/: __init__.py  datasets.py  features.py
src/prediction/models/: __init__.py  base.py  decay_model.py  regression.py
src/simulation/: __init__.py  distributions.py  generator.py
src/simulation/export/: __init__.py  config.py  enums.py  exporter.py  transformers.py
src/simulation/export/formatters/: __init__.py  base.py  csv_formatter.py  excel_formatter.py  json_formatter.py
