[project]
name = "midas-alt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pandas[excel]>=2.3.3",
    "rich>=13.7.0",
    "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "docformatter>=1.7.0",  # For formatting docstring text content
]

[tool.ruff]
# Line length limit
line-length = 132
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable linting rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstring conventions)
]
# Ignore specific rules if needed
ignore = [
    "D100",  # Missing docstring in public module (optional)
    "D200",  # One-line docstring should fit on one line (allow multi-line for long descriptions)
    "D203",  # Ignore: incompatible with D211 (prefer no blank line before class)
    "D213",  # Ignore: incompatible with D212 (prefer summary on first line)
]

[tool.ruff.format]
# Line length (matches Black's default)
line-ending = "auto"
# Use double quotes for strings (Python convention)
quote-style = "double"
# Indent with spaces (Python convention)
indent-style = "space"
# Don't skip magic trailing comma (better for diffs)
skip-magic-trailing-comma = false
# Docstring code format
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
